# hashed-list

./: .gitignore  README.md  setup.cfg
src/hashed_list/: __init__.py  hashed_list.py
tests/: test_list_parity.py  test_unique.py
