[metadata]
name = hashed-list
version = 1.0.0
author = Imran Ariffin
author_email = ariffin.imran@gmail.com
description = An auto-indexed Python List data structure with constant time .index() method
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/imranariffin/hashed-list
project_urls =
    Bug Tracker = https://github.com/imranariffin/hashed-list/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src
